welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:13: error: not found: value guauche
guauche()
^Balin:14: error: not found: value guauche
guauche()
^